# NosleepOnCharge

./: .gitignore  CMakeLists.txt  README.md  main.c  noSleepOnCharge.yml  nosleeponcharge.yml
logging/: log.c  log.h
